gcc/testsuite/gdc.test/compilable/test8898.d
// REQUIRED_ARGS: -w
// PERMUTE_ARGS:

static if (true):

version (Foo)
{
}
else
{
}
